# claude-bash-hook

./: .envrc  CLAUDE.md  Cargo.toml  LICENSE  README.md  REVIEW_NOTES.md  config.default.toml  config.example.toml
.github/workflows/: ci.yml  release.yml
src/: analyzer.rs  config.rs  curl.rs  docker.rs  git.rs  kill.rs  main.rs  nushell.rs  paths.rs  redis.rs  rm.rs  sql.rs  tar.rs  tee.rs  wrapper.rs
src/scripts/: mod.rs  php.rs  python.rs
src/wrappers/: docker_exec.rs  env.rs  gcloud.rs  kubectl.rs  mod.rs  rsync.rs  scp.rs  shell.rs  ssh.rs  terminal_remote.rs  timeout.rs  xargs.rs
