[package]
name = "claude-bash-hook"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter = "0.25"
tree-sitter-bash = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
glob-match = "0.2"
nu-parser = "=0.109.1"
nu-protocol = "=0.109.1"
nu-engine = "=0.109.1"

[profile.release]
lto = true
strip = true
